fix: resolve all SonarCloud code smells (high + medium severity)
Centralize Kafka topic names into KafkaTopics constants class, replace
field injection with ObjectProvider for optional KafkaTemplate, add
isInfoEnabled/isWarnEnabled/isDebugEnabled log guards, switch to
Stream.toList(), and extract method calls outside assertThatThrownBy
lambdas to satisfy java:S5778.